--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <!-- Botão tema -->
   <div id="themeToggle" title="Alternar tema">🌙</div>
 
+    <!-- Splash Screen -->  
+    <section class="section" id="splashSection">
+        <div id="splashParticles"></div>
+        <img src="assets/logo.png" alt="Logo do Evento" id="splashLogo" />
+    </section>
+      
+
   <!-- 1️⃣ CONFIGURAÇÕES -->
   <section class="section" id="configSection">
     <h1>Configurações do Sorteio</h1>
